--- a/test_task/templates/tf-idf.html
+++ b/test_task/templates/tf-idf.html
@@ -1,24 +1,26 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
-    <nav class="nav">
-      <p class="nav-link">Test task - TF and IDF</p>
-    </nav>
+{% extends "base.html" %}
+{% block title %}Test task - TD and IDF{% endblock %}
+{% block content %}
     <header>
+        {% if list %}
+            <table>
+                <tr>
+                    <th>Word</th>
+                    <th>TF</th>
+                    <th>IDF</th>
+                </tr>
+            {% for word in list %}
+                <tr>
+                    <td>{{word[0]}}</td>
+                    <td>{{word[1]}}</td>
+                    <td>{{word[2]}}</td>
+                </tr>
+            {% endfor %}
+            </table>
+        {% endif %}
         <form action="#" method="post" enctype="multipart/form-data">
-            {{ form.text_doc(class='something') }}
-            {{ form.submit(class='something') }}
+            {{ form.file_text_doc(class='text_doc') }}
+            {{ form.submit(class='submit') }}
         </form>
     </header>
-</body>
-</html>
+{% endblock %}
